--- a/dbus-factory/debian/changelog
+++ b/dbus-factory/debian/changelog
@@ -1,3 +1,15 @@
+dbus-factory (3.0.3-2) stable; urgency=low
+
+  * Rebuild Version 3.0.3 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Mon, 23 May 2016 11:13:08 +0000
+
+dbus-factory (3.0.3-1) stable; urgency=low
+
+  * Autobuild Tag 3.0.3 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Mon, 23 May 2016 09:45:47 +0000
+
 dbus-factory (3.0.2-1) stable; urgency=low
 
   * Autobuild Tag 3.0.2 
