--- a/dde-api/debian/changelog
+++ b/dde-api/debian/changelog
@@ -1,3 +1,9 @@
+dde-api (3.0.8-1) stable; urgency=low
+
+  * Autobuild Tag 3.0.8 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Mon, 23 May 2016 09:59:54 +0000
+
 dde-api (3.0.6-2) stable; urgency=low
 
   * Rebuild Version 3.0.6 
