--- a/dde-dock/debian/changelog
+++ b/dde-dock/debian/changelog
@@ -1,3 +1,27 @@
+dde-dock (3.0.11-1) unstable; urgency=low
+
+  * Autobuild Tag 3.0.11 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Fri, 27 May 2016 05:35:51 +0000
+
+dde-dock (3.0.10-2) unstable; urgency=low
+
+  * Rebuild Version 3.0.10 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Thu, 26 May 2016 19:04:32 +0000
+
+dde-dock (3.0.10-1) unstable; urgency=low
+
+  * Autobuild Tag 3.0.10 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Thu, 26 May 2016 17:25:08 +0000
+
+dde-dock (3.0.9-1) stable; urgency=low
+
+  * Autobuild Tag 3.0.9 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Mon, 23 May 2016 12:34:35 +0000
+
 dde-dock (3.0.7-3) stable; urgency=low
 
   * Rebuild Version 3.0.7 
