--- a/dde-help/debian/changelog
+++ b/dde-help/debian/changelog
@@ -1,3 +1,15 @@
+dde-help (3.0.1-1) stable; urgency=low
+
+  * Autobuild Tag 3.0.1 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Thu, 26 May 2016 17:24:49 +0000
+
+dde-help (3.0.0-1) stable; urgency=low
+
+  * Autobuild Tag 3.0.0 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Mon, 23 May 2016 14:22:08 +0000
+
 dde-help (0.20151225) unstable; urgency=medium
 
   * Update makefile. 
