--- a/deepin-boot-maker/debian/changelog
+++ b/deepin-boot-maker/debian/changelog
@@ -1,3 +1,9 @@
+deepin-boot-maker (1.1.3-1) stable; urgency=low
+
+  * Autobuild Tag 1.1.3 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Mon, 23 May 2016 14:19:40 +0000
+
 deepin-boot-maker (1.1.2-1) stable; urgency=low
 
   * Autobuild Tag 1.1.2 
