--- a/deepin-desktop-base/debian/changelog
+++ b/deepin-desktop-base/debian/changelog
@@ -1,3 +1,15 @@
+deepin-desktop-base (2016.02.01-1) stable; urgency=low
+
+  * Autobuild Tag 2016.02.01 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Wed, 25 May 2016 14:42:05 +0000
+
+deepin-desktop-base (2016.01.31-1) unstable; urgency=low
+
+  * Autobuild Tag 2016.01.31 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Mon, 23 May 2016 12:48:41 +0000
+
 deepin-desktop-base (2016.01.29-2) unstable; urgency=low
 
   * Rebuild Version 2016.01.29 
