--- a/deepin-desktop-schemas/debian/changelog
+++ b/deepin-desktop-schemas/debian/changelog
@@ -1,3 +1,9 @@
+deepin-desktop-schemas (3.0.5-1) stable; urgency=low
+
+  * Autobuild Tag 3.0.5 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Mon, 23 May 2016 10:05:31 +0000
+
 deepin-desktop-schemas (3.0.3-2) stable; urgency=low
 
   * Rebuild Version 3.0.3 
