--- a/deepin-gettext-tools/debian/changelog
+++ b/deepin-gettext-tools/debian/changelog
@@ -1,3 +1,9 @@
+deepin-gettext-tools (1.0.3-1) stable; urgency=low
+
+  * Autobuild Tag 1.0.3 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Mon, 23 May 2016 12:49:59 +0000
+
 deepin-gettext-tools (1.0.1-1) stable; urgency=low
 
   * Autobuild Tag 1.0.1 
