--- a/deepin-metacity/debian/changelog
+++ b/deepin-metacity/debian/changelog
@@ -1,3 +1,9 @@
+deepin-metacity (3.18.1.12-2) unstable; urgency=low
+
+  * Rebuild Version 3.18.1.12 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Mon, 23 May 2016 13:06:09 +0000
+
 deepin-metacity (3.18.1.12-1) unstable; urgency=low
 
   * Autobuild Tag 3.18.1.12 
