--- a/deepin-music/debian/changelog
+++ b/deepin-music/debian/changelog
@@ -1,3 +1,9 @@
+deepin-music (2.3.2-1) stable; urgency=low
+
+  * Autobuild Tag 2.3.2 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Mon, 23 May 2016 14:20:26 +0000
+
 deepin-music (2.90.0-1) stable; urgency=low
 
   * Autobuild Tag 2.90.0 
