--- a/deepin-mutter/debian/changelog
+++ b/deepin-mutter/debian/changelog
@@ -1,3 +1,9 @@
+deepin-mutter (3.18.2.8-2) stable; urgency=low
+
+  * Rebuild Version 3.18.2.8 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Mon, 23 May 2016 13:31:22 +0000
+
 deepin-mutter (3.18.2.8-1) stable; urgency=low
 
   * Autobuild Tag 3.18.2.8 
