--- a/deepin-remote-assistance/debian/changelog
+++ b/deepin-remote-assistance/debian/changelog
@@ -1,3 +1,27 @@
+deepin-remote-assistance (1.0.6-2) stable; urgency=low
+
+  * Rebuild Version 1.0.6 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Fri, 27 May 2016 03:18:46 +0000
+
+deepin-remote-assistance (1.0.6-1) stable; urgency=low
+
+  * Autobuild Tag 1.0.6 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Thu, 26 May 2016 17:24:26 +0000
+
+deepin-remote-assistance (1.0.5-1) stable; urgency=low
+
+  * Autobuild Tag 1.0.5 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Mon, 23 May 2016 15:54:06 +0000
+
+deepin-remote-assistance (1.0.4-1) stable; urgency=low
+
+  * Autobuild Tag 1.0.4 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Mon, 23 May 2016 14:17:49 +0000
+
 deepin-remote-assistance (1.0.3-2) stable; urgency=low
 
   * Rebuild Version 1.0.3 
