--- a/deepin-ui/debian/changelog
+++ b/deepin-ui/debian/changelog
@@ -1,3 +1,9 @@
+deepin-ui (1.0.5-1) stable; urgency=low
+
+  * Autobuild Tag 1.0.5 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Wed, 25 May 2016 12:24:02 +0000
+
 deepin-ui (1.0.4-1) stable; urgency=low
 
   * Autobuild Tag 1.0.4-1 
