--- a/deepin-wallpapers/debian/changelog
+++ b/deepin-wallpapers/debian/changelog
@@ -1,3 +1,9 @@
+deepin-wallpapers (1.3-1) stable; urgency=low
+
+  * Autobuild Tag 1.3 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Mon, 23 May 2016 14:13:20 +0000
+
 deepin-wallpapers (1.2) unstable; urgency=medium
 
   * Add image blur
