--- a/deepin-wm-switcher/debian/changelog
+++ b/deepin-wm-switcher/debian/changelog
@@ -1,3 +1,9 @@
+deepin-wm-switcher (1.0.3-1) stable; urgency=low
+
+  * Autobuild Tag 1.0.3 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Mon, 23 May 2016 13:46:44 +0000
+
 deepin-wm-switcher (1.0.1-1) stable; urgency=low
 
   * Autobuild Tag 1.0.1 
