--- a/go-gir-generator/debian/changelog
+++ b/go-gir-generator/debian/changelog
@@ -1,3 +1,9 @@
+go-gir-generator (0.9.3-1) stable; urgency=low
+
+  * Autobuild Tag 0.9.3 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Mon, 23 May 2016 09:20:44 +0000
+
 go-gir-generator (0.9.2-6) stable; urgency=low
 
   * Rebuild Version 0.9.2 
