--- a/startdde/debian/changelog
+++ b/startdde/debian/changelog
@@ -1,3 +1,15 @@
+startdde (3.0.5-2) stable; urgency=low
+
+  * Rebuild Version 3.0.5 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Mon, 23 May 2016 11:37:03 +0000
+
+startdde (3.0.5-1) stable; urgency=low
+
+  * Autobuild Tag 3.0.5 
+
+ -- TagBuilder <tagbuilder@linuxdeepin.com>  Mon, 23 May 2016 10:07:24 +0000
+
 startdde (3.0.3-3) stable; urgency=low
 
   * Rebuild Version 3.0.3 
