--- a/deepin-tool-kit/debian/changelog
+++ b/deepin-tool-kit/debian/changelog
@@ -1,3 +1,9 @@
+deepin-tool-kit (0.2.0-1) stable; urgency=low
+
+  * Autobuild Tag 0.2.0 
+
+ -- TagBuilder <tagbuilder@deepin.com>  Fri, 16 Dec 2016 21:42:44 +0000
+
 deepin-tool-kit (0.1.3-1) stable; urgency=low
 
   * Autobuild Tag 0.1.3 
