--- a/dde-api/debian/changelog
+++ b/dde-api/debian/changelog
@@ -1,3 +1,15 @@
+dde-api (3.0.15-2) unstable; urgency=low
+
+  * Rebuild Version 3.0.15 
+
+ -- TagBuilder <tagbuilder@deepin.com>  Tue, 20 Dec 2016 14:08:30 +0000
+
+dde-api (3.0.15-1) unstable; urgency=low
+
+  * Autobuild Tag 3.0.15 
+
+ -- TagBuilder <tagbuilder@deepin.com>  Tue, 20 Dec 2016 13:50:06 +0000
+
 dde-api (3.0.10-1) unstable; urgency=low
 
   * Autobuild Tag 3.0.10 
