--- a/deepin-metacity/debian/changelog
+++ b/deepin-metacity/debian/changelog
@@ -1,3 +1,9 @@
+deepin-metacity (3.20.6-1) stable; urgency=low
+
+  * Autobuild Tag 3.20.6 
+
+ -- TagBuilder <tagbuilder@deepin.com>  Fri, 16 Dec 2016 15:19:10 +0000
+
 deepin-metacity (3.20.2-1) stable; urgency=low
 
   * Autobuild Tag 3.20.2 
