--- a/deepin-mutter/debian/changelog
+++ b/deepin-mutter/debian/changelog
@@ -1,3 +1,15 @@
+deepin-mutter (3.20.6-2) stable; urgency=low
+
+  * Rebuild Version 3.20.6 
+
+ -- TagBuilder <tagbuilder@deepin.com>  Mon, 19 Dec 2016 14:13:02 +0000
+
+deepin-mutter (3.20.6-1) stable; urgency=low
+
+  * Autobuild Tag 3.20.6 
+
+ -- TagBuilder <tagbuilder@deepin.com>  Fri, 16 Dec 2016 15:22:02 +0000
+
 deepin-mutter (3.20.4-1) stable; urgency=low
 
   * Autobuild Tag 3.20.4 
