--- a/startdde/debian/changelog
+++ b/startdde/debian/changelog
@@ -1,3 +1,27 @@
+startdde (3.0.13-4) unstable; urgency=low
+
+  * Rebuild Version 3.0.13 
+
+ -- TagBuilder <tagbuilder@deepin.com>  Tue, 20 Dec 2016 16:25:10 +0000
+
+startdde (3.0.13-3) unstable; urgency=low
+
+  * Rebuild Version 3.0.13 
+
+ -- TagBuilder <tagbuilder@deepin.com>  Tue, 20 Dec 2016 16:22:14 +0000
+
+startdde (3.0.13-2) unstable; urgency=low
+
+  * Rebuild Version 3.0.13 
+
+ -- TagBuilder <tagbuilder@deepin.com>  Tue, 20 Dec 2016 16:18:10 +0000
+
+startdde (3.0.13-1) unstable; urgency=low
+
+  * Autobuild Tag 3.0.13 
+
+ -- TagBuilder <tagbuilder@deepin.com>  Tue, 20 Dec 2016 16:04:52 +0000
+
 startdde (3.0.7-1) stable; urgency=low
 
   * Autobuild Tag 3.0.7 
